--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
 
     <!-- Bootstrap core CSS -->
-<link href="index.css" rel="stylesheet">
+<link href="./index.css" rel="stylesheet">
 
     <style>
       .bd-placeholder-img {
