--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 </footer>
 
 
-    <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="index.js"></script>
 
       
   </body>
